# axelar-contract-deployments

./: .clippy.toml  .editorconfig  .eslintignore  .eslintrc  .example.env  .gitignore  .gitmodules  .mocharc.yaml  .npmignore  .npmrc  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  .prettierrc.ts  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.json  LICENSE  Notes.md  README.md  REMOVE_expected_auth.swift  _typos.toml  ampd-config.yaml  deny.toml  devnet.md  hardhat.config.js  hardhat.config.ts  index.js  index.ts  package-lock.json  package.json  package.sh  pnpm-lock.yaml  release-plz.toml  temp-arguments.js  temp.txt  terminal_session_20250926_200856.txt  test-proposal.json  (+7 more)
axelar/: Cargo.toml
axelar/contracts/mock-prover/: Cargo.toml
axelar/scripts/: workspace-optimize.sh
crates/axelar-solana-gas-service-events/: Cargo.toml
crates/axelar-solana-gas-service-events/src/: event_prefixes.rs  events.rs
crates/axelar-solana-gateway-test-fixtures/: Cargo.toml
crates/axelar-solana-gateway-test-fixtures/src/: base.rs  gas_service.rs  gateway.rs  lib.rs  test_signer.rs
crates/event-utils/: Cargo.toml
crates/event-utils/src/: lib.rs
crates/gateway-event-stack/: Cargo.toml
crates/gateway-event-stack/src/: lib.rs
helpers/anchor-discriminators-macros/: Cargo.toml
helpers/anchor-discriminators-macros/src/: lib.rs
helpers/anchor-discriminators-macros/tests/: accounts.rs  instructions.rs
helpers/event-cpi-macros/: Cargo.toml
helpers/event-cpi-macros/src/: lib.rs
helpers/event-cpi-macros/tests/: account_struct.rs  event.rs
helpers/program-utils/: Cargo.toml
helpers/program-utils/src/: lib.rs  pda.rs
helpers/role-management/: Cargo.toml
helpers/role-management/src/: lib.rs  processor.rs  state.rs
offchain/: .rustfmt.toml  Cargo.toml  rust-toolchain.toml
offchain/.cargo/: config
offchain/common/: Cargo.toml
offchain/common/src/: lib.rs
offchain/components/amplifier-api/: Cargo.toml
offchain/components/amplifier-api-mock/: Cargo.toml
offchain/components/end-poll/: Cargo.toml
offchain/components/relayer/: Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs
offchain/components/solana-client/: Cargo.toml  README.md
offchain/verify-worker/: Cargo.toml
offchain/xtask-relayer/: Cargo.toml  README.md
offchain/xtask-relayer/src/: main.rs
offchain/xtask-solana-client/: Cargo.toml  README.md
programs/axelar-solana-gas-service/: Cargo.toml  build.rs
programs/axelar-solana-gas-service/src/: events.rs  instructions.rs  lib.rs  processor.rs  state.rs
programs/axelar-solana-gateway/: Cargo.toml  README.md  axelar-executable.md  build.rs
programs/axelar-solana-gateway/src/: entrypoint.rs  error.rs  events.rs  executable.rs  instructions.rs  lib.rs  processor.rs  state.rs
programs/axelar-solana-governance/: Cargo.toml  README.md  build.rs
programs/axelar-solana-governance/src/: entrypoint.rs  events.rs  instructions.rs  lib.rs  sol_types.rs
programs/axelar-solana-its/: Cargo.toml  README.md  build.rs
programs/axelar-solana-its/src/: accounts.rs  entrypoint.rs  event.rs  events.rs  executable.rs  instruction.rs  lib.rs
programs/axelar-solana-memo-program/: Cargo.toml  README.md  build.rs
programs/axelar-solana-memo-program/src/: instruction.rs  lib.rs  processor.rs  state.rs
programs/axelar-solana-multicall/: Cargo.toml  README.md  build.rs
programs/axelar-solana-multicall/src/: entrypoint.rs  instructions.rs  lib.rs  processor.rs
programs/dummy-axelar-solana-event-cpi/: Cargo.toml  README.md
programs/dummy-axelar-solana-event-cpi/examples/: emit_memo.rs
programs/dummy-axelar-solana-event-cpi/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
programs/dummy-axelar-solana-event-cpi/tests/: test.rs
programs/dummy-axelar-solana-gateway/: Cargo.toml
programs/dummy-axelar-solana-gateway/src/: instructions.rs  lib.rs  processor.rs  seed_prefixes.rs
relayer/: Cargo.toml  README.md
relayer/src/axelar/: gateway_verify_messages.rs  mod.rs
relayer/src/common/: config.rs
relayer/src/solana/: gateway_call_contract.rs  mod.rs
solana/: .gitignore  Anchor.toml  Cargo.toml  Dockerfile.gateway  LOAD_TEST_IMPLEMENTATION.md  LOAD_TEST_README.md  Makefile.toml  README.md  checklist.sh  cli  deploy-axelar.sh  deploy.sh  devnet-amplifier.json  mainnet.json  package.json  rust-toolchain.toml  setup-keys.sh  solana-axelar-cli  template.env  testnet.json
solana/.cargo/: config.toml
solana/bindings/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
solana/bindings/anchor_lib/: axelar-solana-its.rs  axelar-solana-memo-program.rs
solana/bindings/tests/: gateway.ts  its.ts  memo-program.ts
solana/cli/: Cargo.toml  README.md  devnet-amplifier.json  mainnet.json  testnet.json
solana/cli/.cargo/: config.toml
solana/cli/src/: broadcast.rs  combine.rs  config.rs  error.rs  gas_service.rs  gateway.rs  generate.rs  governance.rs  its.rs  main.rs  misc.rs  send.rs  sign.rs  types.rs  utils.rs
solana/common/: Cargo.toml
solana/common/src/: client.rs  log_parsing.rs  types.rs
solana/crates/axelar-encoding/: Cargo.toml
solana/crates/axelar-executable/: Cargo.toml  README.md
solana/crates/axelar-rkyv-encoding/: Cargo.toml
solana/crates/axelar-solana-encoding/: Cargo.toml  README.md
solana/scripts/: checklist.sh  deploy-axelar.sh  deploy.sh  its-checklist.sh  setup-its.sh  setup-keys.sh  upgrade.sh  verify.sh
solana/src/: artifact.rs  broadcast.rs  combine.rs  config.rs  deploy.rs  gas_service.rs  gateway.rs  generate.rs  gmp.rs  governance.rs  its.rs  load_test.rs  main.rs  memo.rs  misc.rs  multisig_prover_types.rs  operators.rs  send.rs  sign.rs  types.rs  utils.rs
solana/src/load_test/: helpers.rs  (+5 more)
solana/tests/: gateway.ts  registry.ts
solana/tofnd/: .gitignore
solana/xtask/: Cargo.toml  README.md  ampd-config.toml  build.rs  devnet_gateway_inig_config.toml  solana-devnet.json
solana/xtask-relayer/: Cargo.toml  README.md
solana/xtask-solana-client/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask-end-poll/: Cargo.toml
xtask/src/: main.rs
(+1727 files in other folders)
