[workspace]
members = ["programs/*", "helpers/*", "xtask", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = []
repository = "https://github.com/eigerco/axelar-amplifier-solana"
homepage = "https://github.com/eigerco/axelar-amplifier-solana"
license = "MIT/Apache-2.0"
edition = "2021"

[workspace.lints.clippy]
cargo = { priority = -1, level = "deny" }
complexity = { priority = -2, level = "deny" }
correctness = { priority = -4, level = "deny" }
nursery = { priority = -9, level = "deny" }
pedantic = { priority = -8, level = "deny" }
perf = { priority = -3, level = "deny" }
restriction = { priority = -5, level = "deny" }
style = { priority = -6, level = "deny" }
suspicious = { priority = -7, level = "deny" }

absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
assertions_on_result_states = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
dbg_macro = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
future_not_send = "allow"
host_endian_bytes = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
multiple_crate_versions = "allow"
negative_feature_names = "allow"
option_if_let_else = "allow"
pattern_type_mismatch = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_pub_crate = "allow"
ref_patterns = "allow"
self_named_module_files = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
wildcard_imports = "allow"
shadow_unrelated = "allow"
module_name_repetitions = "allow"
semicolon_outside_block = "allow" # remove this after we update rust-toolchain.toml -- buggy lint
similar_names = "allow"
allow_attributes_without_reason = "allow"
allow_attributes = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
cast_lossless = "allow"
default_numeric_fallback = "allow"
doc_lazy_continuation = "allow"
doc_markdown = "allow"
explicit_deref_methods = "allow"
explicit_iter_loop = "allow"
field_scoped_visibility_modifiers = "allow"
implicit_clone = "allow"
inconsistent_struct_constructor = "allow"
large_futures = "allow"
manual_inspect = "allow"
map_err_ignore = "allow"
min_ident_chars = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_lifetimes = "allow"
needless_pass_by_value = "allow"
non_minimal_cfg = "allow"
precedence = "allow"
redundant_clone = "allow"
std_instead_of_core = "allow"
renamed_function_params = "allow"
too_long_first_doc_paragraph = "allow"
transmute_ptr_to_ptr = "allow"
undocumented_unsafe_blocks = "allow"
unnecessary_wraps = "allow"
unseparated_literal_suffix = "allow"
unused_trait_names = "allow"
unwrap_used = "allow"
use_self = "allow"
unneeded_field_pattern = "allow"

[workspace.lints.rust]
rust_2018_idioms = { level = "allow", priority = 0 }
unreachable_pub = { level = "warn", priority = -1 }
unused_imports = { level = "warn", priority = -1 }
unused_must_use = { level = "deny", priority = -1 }

[workspace.dependencies]
alloy-primitives = "0.7"
alloy-sol-types = "0.7"
anyhow = "1"
arrayref = "0.3.9"
base64 = "0.21"
bcs = "0.1.6"
bincode = "1"
bitflags = "2.6"
bitvec = "1.0.1"
bnum = { version = "0.10", features = ["serde"] }
borsh = { version = "1", features = ["derive"] }
bs58 = "0.5.1"
bytemuck = { version = "1", features = ["derive"] }
cosmwasm-schema = "2"
cosmwasm-std = "1.5"
ed25519-dalek = "2"
ethers = "2"
ethers-core = "2"
futures = "0.3"
hex = "0.4"
lazy_static = "1.5.0"
itertools = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
libsecp256k1 = { version = "0.6", default-features = false }
libsecp-rand = { package = "rand", version = "0.7" }
mpl-token-metadata = "5.1.0"
num-derive = "0.4"
num-traits = "0.2"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
rs_merkle = "1.4.2"
rstest = "0.25"
serde = "1"
serde_json = "1"
sha3 = "0.10"
signature = "2"
simd-json = "0.13"
solana-client = "~2.1"
solana-logger = "~2.1"
solana-program = "~2.1"
solana-program-test = "~2.1"
solana-sdk = "~2.1"
solana-rpc-client = "~2.1"
solana-rpc-client-api = "~2.1"
solana-test-validator = "~2.1"
solana-transaction-status = "~2.1"
spl-associated-token-account = "6.0.0"
spl-pod = "0.4.0"
spl-token = "6.0.0"
spl-token-2022 = "6.0.0"
spl-token-metadata-interface = "0.6.0"
spl-type-length-value = "0.7.0"
static_assertions = "1"
test-context = "0.4"
test-log = { version = "0.2", features = ["trace"], default-features = false }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
typed-builder = "0.20"
xshell = "0.2"
pretty_assertions = "1"
udigest = { version = "0.2", features = ["derive"] }
async-recursion = "1"
keccak-const = "0.2.0"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# solana programs
axelar-solana-its = { path = "programs/axelar-solana-its", default-features = false }
axelar-solana-gas-service = { path = "programs/axelar-solana-gas-service", default-features = false }
axelar-solana-memo-program = { path = "programs/axelar-solana-memo-program", default-features = false }
axelar-solana-multicall = { path = "programs/axelar-solana-multicall", default-features = false }
axelar-solana-gateway = { path = "programs/axelar-solana-gateway", default-features = false }
dummy-axelar-solana-gateway = { path = "programs/dummy-axelar-solana-gateway", default-features = false }
axelar-solana-governance = { path = "programs/axelar-solana-governance", default-features = false }

# helper crates
axelar-message-primitives = { path = "helpers/axelar-message-primitives" }
axelar-solana-encoding = { path = "crates/axelar-solana-encoding" }
axelar-solana-gas-service-events = { path = "crates/axelar-solana-gas-service-events" }
axelar-solana-gateway-test-fixtures = { path = "crates/axelar-solana-gateway-test-fixtures", default-features = false }
event-utils = { path = "crates/event-utils" }
event-macros = { path = "crates/event-macros" }
event-cpi = { path = "helpers/event-cpi" }
event-cpi-macros = { path = "helpers/event-cpi-macros" }
anchor-discriminators = { path = "helpers/anchor-discriminators" }
anchor-discriminators-macros = { path = "helpers/anchor-discriminators-macros" }
evm-contracts-rs = { path = "helpers/evm-contracts-rs" }
evm-contracts-test-suite = { path = "helpers/evm-contracts-test-suite" }
gateway-event-stack = { path = "crates/gateway-event-stack", default-features = false }
governance-gmp = { path = "helpers/governance-gmp" }
interchain-token-transfer-gmp = { path = "helpers/interchain-token-transfer-gmp" }
its-instruction-builder = { path = "helpers/its-instruction-builder", default-features = false }
program-utils = { path = "helpers/program-utils", default-features = false }
role-management = { path = "helpers/role-management" }

[workspace.metadata.cargo-machete]
ignored = ["num-traits"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
