[workspace]
members = ["contracts/*"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
panic = 'abort'

[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
enum-display-derive = "0.1.1"
hex-literal = "0.4.1"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
sha3 = { version = "0.10", default-features = false, features = [] }
thiserror = "1.0.49"

[workspace.dependencies.connection-router]
git = "https://github.com/axelarnetwork/axelar-amplifier.git"
rev = "bc1726e"
features = ["library"]

[workspace.dependencies.gateway]
git = "https://github.com/axelarnetwork/axelar-amplifier.git"
rev = "bc1726e"
features = ["library"]

[workspace.dependencies.multisig]
git = "https://github.com/axelarnetwork/axelar-amplifier.git"
rev = "bc1726e"
features = ["library"]

[workspace.dependencies.multisig-prover]
git = "https://github.com/axelarnetwork/axelar-amplifier.git"
rev = "bc1726e"
features = ["library"]
