[workspace]
members = ["components/*"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
panic = 'abort'

[workspace.dependencies]
anyhow = "1"
axum = "0.7.5"
base64 = "0.21"
bcs = "0.1.6"
borsh = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3.29"
hex = "0.4"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "1.18.0"
solana-program = "1.18.0"
solana-sdk = "1.18.0"
solana-transaction-status = "1.18.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }
tendermint-rpc = "0.34.0"
thiserror = "1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tokio-util = "0.7"
toml = "0.8.10"
tonic = "0.10.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
figment = { version = "0.10.14", features = ["toml", "env"] }

[workspace.dependencies.multisig-prover]
git = "https://github.com/axelarnetwork/axelar-amplifier"
rev = "c0904e1c72c99a174a93b5f6c18b30f52d20b71f"
features = ["library"]


[patch.crates-io]
# aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching both crates to unpin zeroize.
#
# For aes-gcm-siv we’re using the same revision Solana uses in
# an (as of now) unreleased commit, see
# https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
#
# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
