[workspace]
members = ["components/*"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
panic = 'abort'

[workspace.dependencies]
anyhow = "1"
axum = "0.7.5"
bcs = "0.1.6"
borsh = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
dashmap = "5.5.3"
figment = { version = "0.10.14", features = ["toml", "env"] }
futures = "0.3"
futures-concurrency = "7.5.0"
futures-util = "0.3.29"
hex = "0.4"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "1.18.0"
solana-program = "1.18.0"
solana-sdk = "1.18.0"
solana-transaction-status = "1.18.0"
thiserror = "1"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tokio-util = "0.7"
tonic = "0.11"
tonic-build = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1.2"
url = { version = "2.5.0", features = ["serde"] }

[workspace.dependencies.sqlx]
version = "0.7.3"
features = ["runtime-tokio-native-tls", "postgres", "migrate"]

[patch.crates-io]
# aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching both crates to unpin zeroize.
#
# For aes-gcm-siv we’re using the same revision Solana uses in
# an (as of now) unreleased commit, see
# https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
#
# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
