[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.16.18"
solana-client = "1.16.18"
solana-program = "1.16.18"
anchor-client = "0.28.0"
shellexpand = "3.1.0"
serde_json = "1.0.108"
serde = "1.0.192"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0.75"

gateway = { path = "../solana/programs/gateway", features = ["no-entrypoint"] }
