[package]
name = "solana-axelar-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "52a8328", features = [
    "no-entrypoint",
] }
axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "52a8328", features = [
    "no-entrypoint",
] }
axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "52a8328", features = [
    "no-entrypoint",
] }
axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "52a8328", features = [
    "no-entrypoint"
] }
axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "52a8328" }
axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "52a8328" }
its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git", rev = "52a8328" }

axelar-wasm-std = { git = "https://github.com/axelarnetwork/axelar-amplifier.git", rev = "voting-verifier-v1.1.0" }

base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
borsh = "1.5.1"
clap = { version = "3.2", features = ["derive", "env"] }
cosmrs = { version = "0.16", features = ["cosmwasm", "rpc", "grpc"] }
cosmwasm-std = "1.5"
eyre = "0.6.11"
hex = { version = "0.4.3", features = ["serde"] }
k256     = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
solana-clap-v3-utils = "2"
solana-cli-config = "2"
solana-client = "2"
solana-sdk = "2"
spl-token = { version = "6", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["full"] }

[workspace.lints.clippy]
cargo = { priority = -1, level = "deny" }
complexity = { priority = -2, level = "deny" }
correctness = { priority = -4, level = "deny" }
nursery = { priority = -9, level = "deny" }
pedantic = { priority = -8, level = "deny" }
perf = { priority = -3, level = "deny" }
restriction = { priority = -5, level = "deny" }
style = { priority = -6, level = "deny" }
suspicious = { priority = -7, level = "deny" }

[workspace.lints.rust]
rust_2018_idioms = { level = "allow", priority = 0 }
unreachable_pub = { level = "warn", priority = -1 }
unused_imports = { level = "warn", priority = -1 }
unused_must_use = { level = "deny", priority = -1 }
