[package]
name = "xtask-end-poll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tendermint = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = [
    "websocket-client",
    "http-client",
] }
futures = "0.3.29"
futures-util = "0.3.29"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
cosmrs = { version = "0.15.0", features = ["cosmwasm"] }
cosmos-sdk-proto = "0.20.0"
cosmwasm-schema = "1.5.0"
tonic = "0.10.2"
