[package]
name = "axelar-solana-gas-service-events"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
event-utils.workspace = true
solana-program.workspace = true

[lints]
workspace = true
