[package]
name = "axelar-solana-gateway-test-fixtures"
version = "0.1.0"
edition = "2021"

[dependencies]
axelar-solana-encoding.workspace = true
axelar-solana-gas-service = { workspace = true, default-features = false, features = ["no-entrypoint"] }
axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"] }
bincode.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core", "digest"] }
event-cpi.workspace = true
event-cpi-test-utils.workspace = true
libsecp-rand.workspace = true
libsecp256k1.workspace = true
rand.workspace = true
solana-program-test.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
tokio.workspace = true
typed-builder.workspace = true
spl-associated-token-account = { workspace = true, features = [
    "no-entrypoint",
] }

solana-banks-interface = { workspace = true }
solana-test-validator = { workspace = true }
solana-rpc-client-api = { workspace = true }

[lints]
workspace = true

[features]
devnet-amplifier = [
    "axelar-solana-gas-service/devnet-amplifier",
    "axelar-solana-gateway/devnet-amplifier",
]
stagenet = [
    "axelar-solana-gas-service/stagenet",
    "axelar-solana-gateway/stagenet",
]
testnet = [
    "axelar-solana-gas-service/testnet",
    "axelar-solana-gateway/testnet",
]
mainnet = [
    "axelar-solana-gas-service/mainnet",
    "axelar-solana-gateway/mainnet",
]
default = ["devnet-amplifier"]
