[package]
name = "event-utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
event-macros.workspace = true
solana-program.workspace = true
base64.workspace = true
axelar-message-primitives.workspace = true

[lints]
workspace = true
