[package]
name = "gateway-event-stack"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
axelar-solana-gateway = { workspace = true, default-features = false }
axelar-solana-gas-service-events.workspace = true
event-utils.workspace = true
tracing.workspace = true
solana-sdk.workspace = true
base64.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-log.workspace = true

[lints]
workspace = true

[features]
devnet-amplifier = ["axelar-solana-gateway/devnet-amplifier"]
stagenet = ["axelar-solana-gateway/stagenet"]
testnet = ["axelar-solana-gateway/testnet"]
mainnet = ["axelar-solana-gateway/mainnet"]
default = ["devnet-amplifier"]
