[package]
name = "gateway-event-stack"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
axelar-solana-gas-service-events.workspace = true
event-utils.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-log.workspace = true

[lints]
workspace = true
