[package]
name = "anchor-discriminators-macros"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
borsh.workspace = true
anchor-discriminators.workspace = true
proc-macro2 = "1"
quote = "1"
convert_case = "0.8"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
solana-program.workspace = true
solana-sdk.workspace = true
solana-program-test.workspace = true
bytemuck.workspace = true
program-utils.workspace = true
anchor-lang = "0.31.1"
