[package]
name = "event-cpi-macros"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
event-cpi.workspace = true
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
borsh.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
solana-program-test.workspace = true
program-utils.workspace = true
