[package]
name = "program-utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
rkyv = { workspace = true, features = ["validation"] }
borsh.workspace = true
bytemuck.workspace = true
mpl-token-metadata.workspace = true
solana-program.workspace = true
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
