[package]
name = "role-management"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[dependencies]
anchor-discriminators.workspace = true
anchor-discriminators-macros.workspace = true
bincode.workspace = true
bitflags.workspace = true
borsh.workspace = true
program-utils.workspace = true
solana-program.workspace = true

[dev-dependencies]
bitflags.workspace = true
rand.workspace = true
solana-sdk.workspace = true
