[package]
name = "axelar-solana-gas-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anchor-discriminators.workspace = true
anchor-discriminators-macros.workspace = true
solana-program.workspace = true
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
bytemuck.workspace = true
borsh.workspace = true
program-utils.workspace = true
event-cpi.workspace = true
event-cpi-macros.workspace = true

[dev-dependencies]
event-cpi-test-utils.workspace = true
solana-sdk.workspace = true
solana-program-test.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
rstest.workspace = true

[lints]
workspace = true

[lib]
name = "axelar_solana_gas_service"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
devnet-amplifier = [
    "axelar-solana-gateway-test-fixtures/devnet-amplifier",
    "program-utils/devnet-amplifier",
]
stagenet = [
    "axelar-solana-gateway-test-fixtures/stagenet",
    "program-utils/stagenet",
]
testnet = [
    "axelar-solana-gateway-test-fixtures/testnet",
    "program-utils/testnet",
]
mainnet = [
    "axelar-solana-gateway-test-fixtures/mainnet",
    "program-utils/mainnet",
]
default = ["devnet-amplifier"]
